# nicotine_plus

./: .gitignore  Cargo.toml  Cross.toml  LICENSE.md  README.md  build.rs  install-local.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  config_panel.rs  cycle_state.rs  daemon.rs  ipc.rs  lock.rs  main.rs  paths.rs  preview_windows.rs  telemetry.rs  tray.rs  version_check.rs  window_manager.rs  windows_input.rs  windows_manager.rs
