[package]
name = "nicotine"
version = "0.4.1"
edition = "2021"
description = "High-performance EVE Online multiboxing tool (Linux X11/Wayland and Windows)"
license = "MIT"
repository = "https://github.com/isomerc/nicotine"

# Binary name is capitalized so Windows users see `Nicotine.exe` in
# Explorer (standard convention for user-facing apps like Discord.exe,
# Chrome.exe). On Linux `install-local.sh` drops a lowercase `nicotine`
# symlink next to it so shell commands stay lowercase.
[[bin]]
name = "Nicotine"
path = "src/main.rs"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
interprocess = "2.2"
fd-lock = "4.0"
egui = "0.29"
uuid = { version = "1", features = ["v4"] }
# Shared HTTP client used by both the version-check (Linux only) and the
# launch telemetry ping (cross-platform). rustls-tls keeps it pure-ish
# Rust so cargo-xwin cross-builds work without a system OpenSSL/SChannel.
reqwest = { version = "0.12", features = [
  "blocking",
  "json",
  "rustls-tls",
], default-features = false }

[target.'cfg(unix)'.dependencies]
x11rb = { version = "0.13", features = ["all-extensions"] }
eframe = { version = "0.29", default-features = false, features = [
  "default_fonts",
  "glow",
  "wayland",
  "x11",
] }
daemonize = "0.5"
nix = { version = "0.29", features = ["fs"] }
evdev = "0.12"

[target.'cfg(windows)'.dependencies]
eframe = { version = "0.29", default-features = false, features = [
  "default_fonts",
  "glow",
] }
windows = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Accessibility",
  "Win32_UI_HiDpi",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_System_Console",
  "Win32_System_ProcessStatus",
] }
