[package]
name = "inari"
version = "1.3.0"
edition = "2021"
description = "Inari Syndicate için EVE Online multiboxing aracı"
license = "MIT"
repository = "https://github.com/Hikan-Teki/nicotine_plus"

# Capitalized so Windows Explorer shows `Inari.exe` (standard
# convention for user-facing apps like Discord.exe, Chrome.exe).
[[bin]]
name = "Inari"
path = "src/main.rs"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
interprocess = "2.2"
fd-lock = "4.0"
egui = "0.29"
# rustls-tls keeps it pure-ish Rust so cargo-xwin cross-builds work
# without a system OpenSSL/SChannel.
reqwest = { version = "0.12", features = [
  "blocking",
  "json",
  "rustls-tls",
], default-features = false }
eframe = { version = "0.29", default-features = false, features = [
  "default_fonts",
  "glow",
] }
# Matches the version eframe 0.29 pulls in transitively; needed to
# extract the HWND from CreationContext for the tray→main-window
# ShowWindow workaround (winit won't repaint a hidden window, so we
# drive show/hide directly via Win32).
raw-window-handle = "0.6"
windows = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Accessibility",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_System_Console",
  "Win32_System_ProcessStatus",
] }
